--- a/app/src/main/res/layout/notification_main.xml
+++ b/app/src/main/res/layout/notification_main.xml
@@ -11,10 +11,26 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="25sp"
+        android:text="@string/通知中心" />
+
     <ImageView
         android:id="@+id/notification_back"
         android:layout_width="30dp"
         android:layout_height="46dp"
         android:scaleType="fitEnd"
         android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />
+
+    <ListView
+        android:id="@+id/Notification_ss"
+        android:layout_width="343dp"
+        android:layout_height="645dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="166dp" />
 </FrameLayout>
