--- a/app/src/main/res/layout/download_main.xml
+++ b/app/src/main/res/layout/download_main.xml
@@ -12,7 +12,7 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/notification_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
