--- a/app/src/main/res/layout/notification_main.xml
+++ b/app/src/main/res/layout/notification_main.xml
@@ -12,7 +12,7 @@
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/notification_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -28,9 +28,9 @@
 
     <ListView
         android:id="@+id/Notification_ss"
-        android:layout_width="343dp"
-        android:layout_height="645dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="657dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="166dp" />
+        android:layout_marginEnd="0dp" />
 </FrameLayout>
