--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,11 +1,274 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="game" />
-</LinearLayout>
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/explore_headtext1"
+                android:layout_width="wrap_content"
+                android:layout_height="43dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="你可能感兴趣"
+                android:textSize="20sp"
+                android:textColor="#000000" />
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal" >
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_1"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_1"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏1"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_1" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_2"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_2"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏2"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_2" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_3"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_3"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏3"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_3" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_4"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_4"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏4"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_4" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_5"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_5"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏5"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_5" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_6"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_6"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏6"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_6" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_7"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_7"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏7"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_7" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_8"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_8"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏8"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_8" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="120dp"
+                        android:layout_height="155dp">
+
+                        <ImageView
+                            android:id="@+id/explore_imageView1_9"
+                            android:layout_width="120dp"
+                            android:layout_height="120dp"
+                            android:scaleType="fitXY"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/zoro" />
+
+                        <TextView
+                            android:id="@+id/explore_textView1_9"
+                            android:layout_width="120dp"
+                            android:layout_height="35dp"
+                            android:text="游戏9"
+                            android:textSize="16sp"
+                            android:textColor="#000000"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/explore_imageView1_9" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
