--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -18,88 +18,87 @@
 
             <ImageView
                 android:id="@+id/download_back"
-                android:layout_width="35dp"
-                android:layout_height="45dp"
+                android:layout_width="25dp"
+                android:layout_height="35dp"
                 android:scaleType="fitEnd"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
 
             <ImageView
                 android:id="@+id/login_image"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="106dp"
+                android:layout_marginTop="80dp"
                 android:src="@drawable/user" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp">
+                android:layout_marginStart="55dp">
 
                 <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="36dp"
+                    android:id="@+id/icon_user"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="26dp"
                     android:src="@drawable/account"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="52dp"
+                    android:id="@+id/icon_password"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="40dp"
                     android:src="@drawable/password"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/icon_user" />
 
                 <EditText
                     android:id="@+id/user_name"
-                    android:layout_width="250dp"
-                    android:layout_height="80dp"
+                    android:layout_width="180dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintStart_toEndOf="@+id/icon_user"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <EditText
                     android:id="@+id/password"
-                    android:layout_width="250dp"
-                    android:layout_height="80dp"
+                    android:layout_width="180dp"
+                    android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/imageView3"
+                    app:layout_constraintStart_toEndOf="@+id/icon_password"
                     app:layout_constraintTop_toBottomOf="@+id/user_name" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
                 android:id="@+id/login_button"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="93dp"
+                android:layout_marginStart="95dp"
                 android:background="@drawable/icon_shape"
                 android:text="登录"
-                android:textSize="22sp"/>
+                android:textSize="18sp"/>
 
             <Button
                 android:id="@+id/registe_button"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="93dp"
+                android:layout_marginStart="95dp"
                 android:background="@drawable/icon_shape"
                 android:text="账号注册"
-                android:textSize="22sp"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </LinearLayout>
