--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -61,6 +61,7 @@
                     android:layout_width="180dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
+                    android:theme="@style/MyEditText"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/icon_user"
@@ -71,6 +72,7 @@
                     android:layout_width="180dp"
                     android:layout_height="60dp"
                     android:layout_gravity="center"
+                    android:theme="@style/MyEditText"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/icon_password"
