--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -6,8 +6,8 @@
 
     <TextView
         android:id="@+id/downloadtv_ss"
-        android:layout_width="fill_parent"
-        android:layout_height="42dp"
+        android:layout_width="match_parent"
+        android:layout_height="81dp"
         android:layout_gravity="center_vertical"
         android:maxLines="2"
         android:text="@string/下载中心"
