--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#ffffff"/>
-    <corners android:radius="15dip"/>
+    <corners android:radius="10dip"/>
     <padding
-        android:top="10dp"
-        android:bottom="10dp"
-        android:left="10dp"
-        android:right="10dp"
+        android:top="1dp"
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
         />
     <stroke android:width="1dp"
-        android:color="@color/colorPrimary"/>
+        android:color="#D6D6D6"/>
 </shape>
