--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -12,7 +12,7 @@
         app:tabIndicatorColor="@color/colorPrimary"
         app:tabTextColor="#A8A8A8"
         app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabMode="scrollable">
+        app:tabMode="fixed">
     </com.google.android.material.tabs.TabLayout>
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/Ranking_viewPager"
