--- a/app/src/main/res/layout/rankingfrag_2.xml
+++ b/app/src/main/res/layout/rankingfrag_2.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="76dp"
-        android:layout_height="165dp"
-        android:text="Button" />
+    <ListView android:id="@+id/rankingfrag_list2"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:drawSelectorOnTop="false"/>
+
 </LinearLayout>
