--- a/app/src/main/res/layout/activity_gameinfo.xml
+++ b/app/src/main/res/layout/activity_gameinfo.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scrollbars="none"
     android:padding="10dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +45,7 @@
             android:layout_marginTop="120dp"
             android:background="@drawable/button_shape"
             android:text="关注"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#000000"
             app:layout_constraintEnd_toStartOf="@+id/button_download"
             app:layout_constraintTop_toBottomOf="@+id/imageView_introduce" />
 
@@ -53,9 +58,57 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/button_shape"
             android:text="下载"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView_introduce" />
+
+        <TextView
+            android:id="@+id/game_textname"
+            android:layout_width="150dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:maxLines="2"
+            android:text="TextView"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            app:layout_constraintStart_toEndOf="@+id/imageView_game"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_introduce" />
+
+        <TextView
+            android:id="@+id/game_text_mark"
+            android:layout_width="63dp"
+            android:layout_height="35dp"
+            android:layout_marginEnd="16dp"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="@+id/imageView_introduce"
+            app:layout_constraintTop_toTopOf="@+id/game_textname" />
+
+        <Button
+            android:id="@+id/gametag1"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/type_shape"
+            app:layout_constraintStart_toEndOf="@+id/imageView_game"
+            app:layout_constraintTop_toTopOf="@+id/game_textname" />
+
+        <Button
+            android:id="@+id/gametag2"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/type_shape"
+            app:layout_constraintStart_toEndOf="@+id/gametag1"
+            app:layout_constraintTop_toTopOf="@+id/game_textname" />
+
+        <Button
+            android:id="@+id/gametag3"
+            android:layout_width="70dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/type_shape"
+            app:layout_constraintStart_toEndOf="@+id/gametag2"
+            app:layout_constraintTop_toTopOf="@+id/game_textname" />
 
         <TextView
             android:id="@+id/game_textIntroduce"
@@ -75,52 +128,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView_game" />
-
-        <TextView
-            android:id="@+id/game_textname"
-            android:layout_width="131dp"
-            android:layout_height="47dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            android:textSize="25sp"
-            app:layout_constraintStart_toEndOf="@+id/imageView_game"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_introduce" />
-
-        <TextView
-            android:id="@+id/game_text_mark"
-            android:layout_width="63dp"
-            android:layout_height="35dp"
-            android:layout_marginEnd="16dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="@+id/imageView_introduce"
-            app:layout_constraintTop_toTopOf="@+id/game_textname" />
-
-        <Button
-            android:id="@+id/gametag1"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="48dp"
-            android:text="Button"
-            app:layout_constraintStart_toEndOf="@+id/imageView_game"
-            app:layout_constraintTop_toTopOf="@+id/game_textname" />
-
-        <Button
-            android:id="@+id/gametag2"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="48dp"
-            android:text="Button"
-            app:layout_constraintStart_toEndOf="@+id/gametag1"
-            app:layout_constraintTop_toTopOf="@+id/game_textname" />
-
-        <Button
-            android:id="@+id/gametag3"
-            android:layout_width="70dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="48dp"
-            android:text="Button"
-            app:layout_constraintStart_toEndOf="@+id/gametag2"
-            app:layout_constraintTop_toTopOf="@+id/game_textname" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/mytab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabTextColor="#A8A8A8"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabMode="fixed">
+        </com.google.android.material.tabs.TabLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 </ScrollView>
