--- a/app/src/main/res/layout/activity_gameinfo.xml
+++ b/app/src/main/res/layout/activity_gameinfo.xml
@@ -138,10 +138,19 @@
             app:tabSelectedTextColor="@color/colorPrimary"
             app:tabMode="fixed">
         </com.google.android.material.tabs.TabLayout>
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
+
+        <!--<androidx.viewpager.widget.ViewPager-->
+            <!--android:id="@+id/viewPager"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+        <com.example.myapplication2.WrapContentHeightViewPager
+            android:id="@+id/viewPager_gameinfo"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
