--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -62,6 +62,7 @@
                     android:layout_height="70dp"
                     android:layout_gravity="center"
                     android:theme="@style/MyEditText"
+                    android:hint="用户名"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/icon_user"
@@ -73,6 +74,7 @@
                     android:layout_height="70dp"
                     android:layout_gravity="center"
                     android:theme="@style/MyEditText"
+                    android:hint="密码"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     app:layout_constraintStart_toEndOf="@+id/icon_password"
