--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sssss"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -48,41 +49,40 @@
 
                     <ImageView
                         android:id="@+id/photocut_1"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="142dp"
+                        android:layout_height="80dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/zoro" />
                     <ImageView
                         android:id="@+id/photocut_2"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="142dp"
+                        android:layout_height="80dp"
+
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/zoro" />
                     <ImageView
                         android:id="@+id/photocut_3"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="142dp"
+                        android:layout_height="80dp"
+
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/zoro" />
                     <ImageView
                         android:id="@+id/photocut_4"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="142dp"
+                        android:layout_height="80dp"
+
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/zoro" />
                     <ImageView
                         android:id="@+id/photocut_5"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:scaleType="fitXY"
+                        android:layout_width="142dp"
+                        android:layout_height="80dp"
+
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/zoro" />
