--- a/app/src/main/res/layout/mygame_main.xml
+++ b/app/src/main/res/layout/mygame_main.xml
@@ -17,4 +17,10 @@
         android:layout_height="46dp"
         android:scaleType="fitEnd"
         android:src="@drawable/ic_keyboard_arrow_left_white_24dp" />
+
+    <ListView
+        android:id="@+id/mygamelv_ss"
+        android:layout_width="match_parent"
+        android:layout_height="661dp"
+        android:layout_marginTop="60dp" />
 </FrameLayout>
