--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/comment_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,141 +18,141 @@
 
             <ImageView
                 android:id="@+id/star_1"
-                app:layout_constraintEnd_toStartOf="@+id/star_2"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_star_black_18dp"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginTop="28dp" />
+                android:layout_marginTop="28dp"
+                app:layout_constraintEnd_toStartOf="@+id/star_2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_15"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar5"
                 app:layout_constraintTop_toBottomOf="@+id/star_14"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_13"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/star_14"
                 app:layout_constraintTop_toBottomOf="@+id/star_11"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_14"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar4"
                 app:layout_constraintTop_toBottomOf="@+id/star_12"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_10"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/star_11"
                 app:layout_constraintTop_toBottomOf="@+id/star_7"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_11"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/star_12"
                 app:layout_constraintTop_toBottomOf="@+id/star_8"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_12"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar3"
                 app:layout_constraintTop_toBottomOf="@+id/star_9"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_6"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/star_7"
                 app:layout_constraintTop_toBottomOf="@+id/star_2"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_7"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/star_8"
                 app:layout_constraintTop_toBottomOf="@+id/star_3"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_8"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/star_9"
                 app:layout_constraintTop_toBottomOf="@+id/star_4"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_9"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar2"
                 app:layout_constraintTop_toBottomOf="@+id/star_5"
-                app:srcCompat="@drawable/ic_star_black_18dp"
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_2"
-                app:layout_constraintEnd_toStartOf="@+id/star_3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_star_black_18dp"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginTop="28dp" />
+                android:layout_marginTop="28dp"
+                app:layout_constraintEnd_toStartOf="@+id/star_3"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_3"
-                app:layout_constraintEnd_toStartOf="@+id/star_4"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_star_black_18dp"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginTop="28dp" />
+                android:layout_marginTop="28dp"
+                app:layout_constraintEnd_toStartOf="@+id/star_4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_5"
-                app:layout_constraintEnd_toStartOf="@+id/progressBar"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_star_black_18dp"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginTop="28dp" />
+                android:layout_marginTop="28dp"
+                app:layout_constraintEnd_toStartOf="@+id/progressBar"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
             <ImageView
                 android:id="@+id/star_icon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_stars_teal_800_24dp"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginStart="52dp"
-                android:layout_marginTop="30dp" />
+                android:layout_marginTop="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_stars_teal_800_24dp" />
 
             <TextView
                 android:id="@+id/game_point"
-                app:layout_constraintStart_toEndOf="@+id/star_icon"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="26dp"
                 android:text="9.0"
+                android:textColor="@color/colorPrimary"
                 android:textSize="28sp"
-                android:textColor="@color/colorPrimary"/>
+                app:layout_constraintStart_toEndOf="@+id/star_icon"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/comment_title"
@@ -167,13 +168,13 @@
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:progressDrawable="@drawable/progressbar_shape"
                 android:layout_width="120dp"
                 android:layout_height="10dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="28dp"
                 android:max="100"
                 android:progress="100"
+                android:progressDrawable="@drawable/progressbar_shape"
                 app:layout_constraintStart_toEndOf="@+id/game_point"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -192,52 +193,53 @@
             <ProgressBar
                 android:id="@+id/progressBar3"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:progressDrawable="@drawable/progressbar_shape"
                 android:layout_width="120dp"
                 android:layout_height="10dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="48dp"
                 android:max="100"
                 android:progress="60"
+                android:progressDrawable="@drawable/progressbar_shape"
                 app:layout_constraintStart_toEndOf="@+id/game_point"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ProgressBar
                 android:id="@+id/progressBar4"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:progressDrawable="@drawable/progressbar_shape"
                 android:layout_width="120dp"
                 android:layout_height="10dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="58dp"
                 android:max="100"
                 android:progress="40"
+                android:progressDrawable="@drawable/progressbar_shape"
                 app:layout_constraintStart_toEndOf="@+id/game_point"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ProgressBar
                 android:id="@+id/progressBar5"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:progressDrawable="@drawable/progressbar_shape"
                 android:layout_width="120dp"
                 android:layout_height="10dp"
                 android:layout_marginStart="60dp"
                 android:layout_marginTop="68dp"
                 android:max="100"
                 android:progress="20"
+                android:progressDrawable="@drawable/progressbar_shape"
                 app:layout_constraintStart_toEndOf="@+id/game_point"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/star_4"
-                app:layout_constraintEnd_toStartOf="@+id/star_5"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_star_black_18dp"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginTop="28dp" />
+                android:layout_marginTop="28dp"
+                app:layout_constraintEnd_toStartOf="@+id/star_5"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_star_black_18dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -267,11 +269,11 @@
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                android:progressTint="@color/colorPrimary"
-                android:secondaryProgressTint="@color/colorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="84dp"
+                android:progressTint="@color/colorPrimary"
+                android:secondaryProgressTint="@color/colorPrimary"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_image" />
 
@@ -293,64 +295,26 @@
             android:text="玩家评价"
             android:textColor="#000000"
             android:textSize="20sp" />
+
+        <ListView
+            android:id="@+id/comment_list"
+            android:layout_width="match_parent"
+            android:layout_height="317dp" />
+
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="20dp">
 
-            <TextView
-                android:id="@+id/player_comment1"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="68dp"
-                android:text="这是玩家的评论"
-                android:textColor="#000000"
-                android:textSize="13sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/player_image1"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:scaleType="fitXY"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/zoro" />
-
-            <TextView
-                android:id="@+id/player_name1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:text="玩家1"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@+id/player_image1"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <RatingBar
-                android:id="@+id/ratingBar2"
-                style="?android:attr/ratingBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/player_image1" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:clickable="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            app:backgroundTint="@color/colorPrimary"
-            app:borderWidth="0dp"
-            app:elevation="0dp"
-            android:src="@drawable/ic_create_white_24dp"/>
+                android:layout_gravity="bottom|end"
+                android:clickable="true"
+                android:src="@drawable/ic_create_white_24dp"
+                app:backgroundTint="@color/colorPrimary"
+                app:borderWidth="0dp"
+                app:elevation="0dp" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </LinearLayout>
 </ScrollView>
