--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -73,11 +73,11 @@
                     android:layout_width="220dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center"
-                    android:theme="@style/MyEditText"
-                    android:hint="密码"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:inputType="numberPassword"
+                    android:hint="密码"
+                    android:inputType="textAutoCorrect"
+                    android:theme="@style/MyEditText"
                     app:layout_constraintStart_toEndOf="@+id/icon_password"
                     app:layout_constraintTop_toBottomOf="@+id/user_name" />
             </androidx.constraintlayout.widget.ConstraintLayout>
